[package]
name = "ska"
version = "0.3.8"
authors = [
    "John Lees <jlees@ebi.ac.uk>",
    "Simon Harris <simon.harris@gatesfoundation.org>",
    "Johanna von Wachsmann <wachsmannj@ebi.ac.uk>",
    "Tommi Maklin <tommi.maklin@helsinki.fi>",
    "Joel Hellewell <joel@ebi.ac.uk>",
    "Timothy Russell <timothy.russell@lshtm.ac.uk>",
    "Romain Derelle <r.derelle@imperial.ac.uk>",
    "Nicholas Croucher <n.croucher@imperial.ac.uk>"
]
edition = "2021"
description = "Split k-mer analysis"
repository = "https://github.com/bacpop/ska.rust/"
homepage = "https://bacpop.org/software/"
license = "Apache-2.0"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/NOTICE",
    "/src",
    "/tests"
]
keywords = ["bioinformatics", "genomics", "sequencing", "k-mer", "alignment"]
categories = ["command-line-utilities", "science"]

[dependencies]
# i/o
needletail = { version = "0.5.1", features = ["compression"] }
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
noodles-vcf = "0.49"
snap = "1.1"
# logging
log = "0.4"
simple_logger = { version = "4", features = ["stderr"] }
indicatif = { version = "0.17", features = ["rayon"]}
# cli
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
# parallelisation
rayon = "1.8"
num_cpus = "1.0"
# data structures
hashbrown = "0.14"
ahash = ">=0.8.7"
ndarray = { version = "0.15", features = ["serde", "rayon"] }
num-traits = "0.2"
# coverage model
libm = "0.2"
argmin = { version = "0.9", features = ["slog-logger"] }
argmin-math = "0.3"

[dev-dependencies]
# testing
snapbox = "0.4.3"
predicates = "2.1.5"
assert_fs = "1.0.10"
pretty_assertions = "1.3.0"
