[package]
name = "ska"
version = "0.5.1"
authors = [
    "John Lees <jlees@ebi.ac.uk>",
    "Simon Harris <simon.harris@gatesfoundation.org>",
    "Johanna von Wachsmann <wachsmannj@ebi.ac.uk>",
    "Tommi Maklin <tommi.maklin@helsinki.fi>",
    "Joel Hellewell <joel@ebi.ac.uk>",
    "Timothy Russell <timothy.russell@lshtm.ac.uk>",
    "Romain Derelle <r.derelle@imperial.ac.uk>",
    "Nicholas Croucher <n.croucher@imperial.ac.uk>"
]
edition = "2021"
description = "Split k-mer analysis"
repository = "https://github.com/bacpop/ska.rust/"
homepage = "https://bacpop.org/software/"
license = "Apache-2.0"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/NOTICE",
    "/src",
    "/tests"
]
keywords = ["bioinformatics", "genomics", "sequencing", "k-mer", "alignment"]
categories = ["command-line-utilities", "science"]

[features]
default = ["basic"]
basic = ["needletail", "serde", "ciborium", "noodles-vcf", "snap", "log", "simple_logger", "indicatif", "clap", "regex", "rayon",
    "num_cpus", "hashbrown", "ahash", "ndarray", "num-traits", "libm", "argmin", "argmin-math", "bit-set", "dashmap", "seq_io", "flate2"]
wasm = ["serde", "ciborium", "snap", "log", "simple_logger", "clap", "regex", "rayon",
    "num_cpus", "hashbrown", "ndarray", "num-traits", "bit-set", "seq_io", "flate2",
    "wasm-bindgen", "console_error_panic_hook", "wasm-bindgen-file-reader", "json", "speedytree", "getrandom", "web-sys", "js-sys"]

[dependencies]
# i/o
# needletail = { version = "0.5.1", features = ["compression"], optional = true }
needletail = { version = "0.6.3", default-features = false, features = ["flate2", "xz2", "zstd"], optional = true}
serde = { version = "1.0", features = ["derive"], optional = true }
ciborium = { version = "0.2", optional = true }
noodles-vcf = { version = "0.49", optional = true }
snap = { version = "1.1", optional = true }
# logging
log = { version = "0.4", optional = true }
simple_logger = { version = "4", features = ["stderr"], optional = true }
indicatif = { version = "0.17", features = ["rayon"], optional = true}
# cli
clap = { version = "4.5", features = ["derive"], optional = true }
regex = { version = "1.10", optional = true }
# parallelisation
rayon = { version = "1.8", optional = true }
num_cpus = { version = "1.0", optional = true }
# data structures
hashbrown = { version = "0.14", features = ["rayon"], optional = true }
ahash = {version = ">=0.8.7", optional = true }
# ahash = {version = "0.8.11", optional = true }
ndarray = { version = "0.15", features = ["serde", "rayon"], optional = true }
num-traits = { version = "0.2", optional = true }
# coverage model
libm = { version = "0.2", optional = true }
argmin = { version = "0.9", features = ["slog-logger"], optional = true }
argmin-math = { version = "0.3", optional = true }
# skalo
bit-set = { version = "0.8.0", optional = true }
dashmap = { version = "6.1.0", optional = true }
seq_io = { version = "0.3.2", optional = true }
flate2 = { version = "1.0.25", optional = true }
# wasm
wasm-bindgen = {version = "0.2", optional = true}
wasm-bindgen-file-reader = {version = "1", optional = true}
console_error_panic_hook = {version = "0.1.7", optional = true}
json = {version = "0.12.4", optional = true}
speedytree = {version = "0.1.0", optional = true}
getrandom = {version = "0.2"   , optional = true, features = ["js"]}
web-sys = {version = "0.3.77", optional = true, features = ["Blob", "console", "Document", "Element", "HtmlCanvasElement", "HtmlImageElement", "Response", "Window"]}
js-sys = {version = "0.3.51", optional = true}

[dev-dependencies]
# testing
snapbox = "0.4.3"
predicates = "2.1.5"
# assert_fs = "1.0.10"
pretty_assertions = "1.3.0"

[profile.release]
lto = true
strip = false # could be changed in future
codegen-units = 1

[lib]
crate-type = ["cdylib", "rlib"]
